deployments/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: urbanzen
  labels:
    name: urbanzen
